removal of fuzzies and corrections

--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-08-08 10:48+0100\n"
+"PO-Revision-Date: 2021-10-13 07:32+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -95,7 +95,6 @@ msgid "The Future for Python 2.x"
 msgstr "El futuro de Python 2.x"
 
 #: ../Doc/whatsnew/2.7.rst:82
-#, fuzzy
 msgid ""
 "Python 2.7 is the last major release in the 2.x series, as the Python "
 "maintainers have shifted the focus of their new feature development efforts "
@@ -1062,7 +1061,6 @@ msgstr ""
 "redondear x a 17 dígitos decimales."
 
 #: ../Doc/whatsnew/2.7.rst:749
-#, fuzzy
 msgid ""
 "The rounding library responsible for this improvement works on Windows and "
 "on Unix platforms using the gcc, icc, or suncc compilers.  There may be a "
@@ -1080,7 +1078,6 @@ msgstr ""
 "uso y ``legacy`` si no lo está."
 
 #: ../Doc/whatsnew/2.7.rst:757
-#, fuzzy
 msgid ""
 "Implemented by Eric Smith and Mark Dickinson, using David Gay's :file:`dtoa."
 "c` library; :issue:`7117`."
@@ -1089,7 +1086,6 @@ msgstr ""
 "David Gay's :file:`dtoa.c`; :issue:`7117`."
 
 #: ../Doc/whatsnew/2.7.rst:760
-#, fuzzy
 msgid ""
 "Conversions from long integers and regular integers to floating point now "
 "round differently, returning the floating-point number closest to the "
@@ -1106,7 +1102,6 @@ msgstr ""
 "ejemplo, Python 2.6 calculaba lo siguiente::"
 
 #: ../Doc/whatsnew/2.7.rst:773
-#, fuzzy
 msgid ""
 "Python 2.7's floating-point result is larger, but much closer to the true "
 "value::"
@@ -1115,12 +1110,10 @@ msgstr ""
 "del valor verdadero::"
 
 #: ../Doc/whatsnew/2.7.rst:782
-#, fuzzy
 msgid "(Implemented by Mark Dickinson; :issue:`3166`.)"
 msgstr "(Implementado por Mark Dickinson; :issue:`3166`.)"
 
 #: ../Doc/whatsnew/2.7.rst:784
-#, fuzzy
 msgid ""
 "Integer division is also more accurate in its rounding behaviours.  (Also "
 "implemented by Mark Dickinson; :issue:`1811`.)"
@@ -1129,7 +1122,6 @@ msgstr ""
 "redondeo.  (También implementado por Mark Dickinson; :issue:`1811`.)"
 
 #: ../Doc/whatsnew/2.7.rst:787
-#, fuzzy
 msgid ""
 "Implicit coercion for complex numbers has been removed; the interpreter will "
 "no longer ever attempt to call a :meth:`__coerce__` method on complex "
@@ -1141,7 +1133,7 @@ msgstr ""
 "`5211`.)"
 
 #: ../Doc/whatsnew/2.7.rst:791
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "The :meth:`str.format` method now supports automatic numbering of the "
 "replacement fields.  This makes using :meth:`str.format` more closely "
@@ -1149,10 +1141,9 @@ msgid ""
 msgstr ""
 "El método :meth:`str.format` soporta ahora la numeración automática de los "
 "campos de sustitución.  Esto hace que el uso de :meth:`str.format` se "
-"asemeje más al uso del formato ``%s``::"
+"asemeje más al uso del formateo ``%s``::"
 
 #: ../Doc/whatsnew/2.7.rst:800
-#, fuzzy
 msgid ""
 "The auto-numbering takes the fields from left to right, so the first ``{...}"
 "`` specifier will use the first argument to :meth:`str.format`, the next "
@@ -1170,7 +1161,6 @@ msgstr ""
 "el segundo ejemplo anterior.  (Contribución de Eric Smith; :issue:`5237`.)"
 
 #: ../Doc/whatsnew/2.7.rst:807
-#, fuzzy
 msgid ""
 "Complex numbers now correctly support usage with :func:`format`, and default "
 "to being right-aligned. Specifying a precision or comma-separation applies "
@@ -1186,7 +1176,6 @@ msgstr ""
 "(Contribución de Eric Smith; :issue:`1588` y :issue:`7988`)"
 
 #: ../Doc/whatsnew/2.7.rst:814
-#, fuzzy
 msgid ""
 "The 'F' format code now always formats its output using uppercase "
 "characters, so it will now produce 'INF' and 'NAN'. (Contributed by Eric "
@@ -1197,7 +1186,6 @@ msgstr ""
 "(Contribución de Eric Smith; :issue:`3382`.)"
 
 #: ../Doc/whatsnew/2.7.rst:818
-#, fuzzy
 msgid ""
 "A low-level change: the :meth:`object.__format__` method now triggers a :exc:"
 "`PendingDeprecationWarning` if it's passed a format string, because the :"
@@ -1219,7 +1207,6 @@ msgstr ""
 "específica del objeto.  (Arreglado por Eric Smith; :issue:`7994`.)"
 
 #: ../Doc/whatsnew/2.7.rst:828
-#, fuzzy
 msgid ""
 "The :func:`int` and :func:`long` types gained a ``bit_length`` method that "
 "returns the number of bits necessary to represent its argument in binary::"
@@ -1229,12 +1216,10 @@ msgstr ""
 "binario::"
 
 #: ../Doc/whatsnew/2.7.rst:843
-#, fuzzy
 msgid "(Contributed by Fredrik Johansson and Victor Stinner; :issue:`3439`.)"
 msgstr "(Contribución de Fredrik Johansson y Victor Stinner; :issue:`3439`.)"
 
 #: ../Doc/whatsnew/2.7.rst:845
-#, fuzzy
 msgid ""
 "The :keyword:`import` statement will no longer try an absolute import if a "
 "relative import (e.g. ``from .os import sep``) fails.  This fixes a bug, but "
@@ -1248,7 +1233,6 @@ msgstr ""
 "accidente.  (Arreglado por Meador Inge; :issue:`7902`.)"
 
 #: ../Doc/whatsnew/2.7.rst:851
-#, fuzzy
 msgid ""
 "It's now possible for a subclass of the built-in :class:`unicode` type to "
 "override the :meth:`__unicode__` method.  (Implemented by Victor Stinner; :"
@@ -1259,7 +1243,6 @@ msgstr ""
 "issue:`1583863`.)"
 
 #: ../Doc/whatsnew/2.7.rst:855
-#, fuzzy
 msgid ""
 "The :class:`bytearray` type's :meth:`~bytearray.translate` method now "
 "accepts ``None`` as its first argument.  (Fixed by Georg Brandl; :issue:"
@@ -1270,7 +1253,6 @@ msgstr ""
 "`4759`.)"
 
 #: ../Doc/whatsnew/2.7.rst:861
-#, fuzzy
 msgid ""
 "When using ``@classmethod`` and ``@staticmethod`` to wrap methods as class "
 "or static methods, the wrapper object now exposes the wrapped function as "
@@ -1283,7 +1265,6 @@ msgstr ""
 "d'Arc, después de una sugerencia de George Sakkis; :issue:`5982`.)"
 
 #: ../Doc/whatsnew/2.7.rst:867 ../Doc/whatsnew/2.7.rst:2462
-#, fuzzy
 msgid ""
 "When a restricted set of attributes were set using ``__slots__``, deleting "
 "an unset attribute would not raise :exc:`AttributeError` as you would "
@@ -1295,7 +1276,6 @@ msgstr ""
 "issue:`7604`)"
 
 #: ../Doc/whatsnew/2.7.rst:871
-#, fuzzy
 msgid ""
 "Two new encodings are now supported: \"cp720\", used primarily for Arabic "
 "text; and \"cp858\", a variant of CP 850 that adds the euro symbol.  (CP720 "
@@ -1309,7 +1289,6 @@ msgstr ""
 "en :issue:`8016`)"
 
 #: ../Doc/whatsnew/2.7.rst:877
-#, fuzzy
 msgid ""
 "The :class:`file` object will now set the :attr:`filename` attribute on the :"
 "exc:`IOError` exception when trying to open a directory on POSIX platforms "
@@ -1325,7 +1304,6 @@ msgstr ""
 "del error (corregido por Stefan Krah; :issue:`5677`)."
 
 #: ../Doc/whatsnew/2.7.rst:884
-#, fuzzy
 msgid ""
 "The Python tokenizer now translates line endings itself, so the :func:"
 "`compile` built-in function now accepts code using any line-ending "
@@ -1338,7 +1316,6 @@ msgstr ""
 "el código termine en una nueva línea."
 
 #: ../Doc/whatsnew/2.7.rst:889
-#, fuzzy
 msgid ""
 "Extra parentheses in function definitions are illegal in Python 3.x, meaning "
 "that you get a syntax error from ``def f((x)): pass``.  In Python3-warning "
@@ -1352,7 +1329,6 @@ msgstr ""
 "issue:'7362'.)"
 
 #: ../Doc/whatsnew/2.7.rst:894
-#, fuzzy
 msgid ""
 "It's now possible to create weak references to old-style class objects.  New-"
 "style classes were always weak-referenceable.  (Fixed by Antoine Pitrou; :"
@@ -1363,7 +1339,6 @@ msgstr ""
 "(Corregido por Antoine Pitrou; :issue:`8268`.)"
 
 #: ../Doc/whatsnew/2.7.rst:898
-#, fuzzy
 msgid ""
 "When a module object is garbage-collected, the module's dictionary is now "
 "only cleared if no one else is holding a reference to the dictionary (:issue:"
@@ -1373,12 +1348,10 @@ msgstr ""
 "se borra si nadie más tiene una referencia al diccionario (:issue:`7140`)."
 
 #: ../Doc/whatsnew/2.7.rst:907
-#, fuzzy
 msgid "Interpreter Changes"
 msgstr "Cambios en el intérprete"
 
 #: ../Doc/whatsnew/2.7.rst:909
-#, fuzzy
 msgid ""
 "A new environment variable, :envvar:`PYTHONWARNINGS`, allows controlling "
 "warnings.  It should be set to a string containing warning settings, "
@@ -1392,7 +1365,6 @@ msgstr ""
 "Curtin; :issue:`7301`.)"
 
 #: ../Doc/whatsnew/2.7.rst:915
-#, fuzzy
 msgid ""
 "For example, the following setting will print warnings every time they "
 "occur, but turn warnings from the :mod:`Cookie` module into an error.  (The "
@@ -1409,12 +1381,10 @@ msgid "Optimizations"
 msgstr "Optimizaciones"
 
 #: ../Doc/whatsnew/2.7.rst:930
-#, fuzzy
 msgid "Several performance enhancements have been added:"
 msgstr "Se han añadido varias mejoras de rendimiento:"
 
 #: ../Doc/whatsnew/2.7.rst:932
-#, fuzzy
 msgid ""
 "A new opcode was added to perform the initial setup for :keyword:`with` "
 "statements, looking up the :meth:`__enter__` and :meth:`__exit__` methods.  "
@@ -1425,7 +1395,7 @@ msgstr ""
 "`__enter__` y :meth:`__exit__`.  (Contribución de Benjamin Peterson.)"
 
 #: ../Doc/whatsnew/2.7.rst:936
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "The garbage collector now performs better for one common usage pattern: when "
 "many objects are being allocated without deallocating any of them.  This "
@@ -1444,12 +1414,10 @@ msgstr ""
 "objetos en el montón. La nueva lógica sólo realiza una pasada completa de "
 "recogida de basura cuando la generación intermedia ha sido recogida 10 veces "
 "y cuando el número de objetos supervivientes de la generación intermedia "
-"supera el 10% of del número de objetos de la generación más antigua.  "
-"(Sugerido por Martin von Löwis e implementado por Antoine Pitrou; :issue:"
-"`4074`.)"
+"supera el 10% del número de objetos de la generación más antigua.  (Sugerido "
+"por Martin von Löwis e implementado por Antoine Pitrou; :issue:`4074`.)"
 
 #: ../Doc/whatsnew/2.7.rst:947
-#, fuzzy
 msgid ""
 "The garbage collector tries to avoid tracking simple containers which can't "
 "be part of a cycle. In Python 2.7, this is now true for tuples and dicts "
@@ -1468,7 +1436,6 @@ msgstr ""
 "recorrer el recolector. (Contribución de Antoine Pitrou; :issue:`4688`.)"
 
 #: ../Doc/whatsnew/2.7.rst:956
-#, fuzzy
 msgid ""
 "Long integers are now stored internally either in base 2**15 or in base "
 "2**30, the base being determined at build time.  Previously, they were "
@@ -1490,7 +1457,6 @@ msgstr ""
 "big-digits` que puede utilizarse para anular este valor por defecto."
 
 #: ../Doc/whatsnew/2.7.rst:965
-#, fuzzy
 msgid ""
 "Apart from the performance improvements this change should be invisible to "
 "end users, with one exception: for testing and debugging purposes there's a "
@@ -1505,12 +1471,10 @@ msgstr ""
 "bytes del tipo C utilizado para almacenar cada dígito::"
 
 #: ../Doc/whatsnew/2.7.rst:976
-#, fuzzy
 msgid "(Contributed by Mark Dickinson; :issue:`4258`.)"
 msgstr "(Contribución de Mark Dickinson; :issue:`4258`.)"
 
 #: ../Doc/whatsnew/2.7.rst:978
-#, fuzzy
 msgid ""
 "Another set of changes made long objects a few bytes smaller: 2 bytes "
 "smaller on 32-bit systems and 6 bytes on 64-bit. (Contributed by Mark "
@@ -1521,7 +1485,7 @@ msgstr ""
 "bits. (Contribución de Mark Dickinson; :issue:`5260`.)"
 
 #: ../Doc/whatsnew/2.7.rst:982
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "The division algorithm for long integers has been made faster by tightening "
 "the inner loop, doing shifts instead of multiplications, and fixing an "
@@ -1533,14 +1497,13 @@ msgstr ""
 "El algoritmo de división de enteros largos se ha hecho más rápido ajustando "
 "el bucle interno, haciendo desplazamientos en lugar de multiplicaciones, y "
 "arreglando una iteración extra innecesaria. Varias pruebas de referencia "
-"muestran un aumento de velocidad de entre el 50% a y el 150% f en las "
+"muestran un aumento de velocidad de entre el 50% a y el 150% en las "
 "divisiones de enteros largos y en las operaciones de módulo. (Contribución "
 "de Mark Dickinson; :issue:`5512`). Las operaciones a nivel de bit también "
 "son significativamente más rápidas (parche inicial de Gregory Smith; :issue:"
 "`1087418`)."
 
 #: ../Doc/whatsnew/2.7.rst:991
-#, fuzzy
 msgid ""
 "The implementation of ``%`` checks for the left-side operand being a Python "
 "string and special-cases it; this results in a 1--3% performance increase "
@@ -1554,7 +1517,6 @@ msgstr ""
 "(Implementado por Collin Winter; :issue:`5176`.)"
 
 #: ../Doc/whatsnew/2.7.rst:997
-#, fuzzy
 msgid ""
 "List comprehensions with an ``if`` condition are compiled into faster "
 "bytecode.  (Patch by Antoine Pitrou, back-ported to 2.7 by Jeffrey Yasskin; :"
@@ -1565,7 +1527,6 @@ msgstr ""
 "por Jeffrey Yasskin; :issue:`4715`)"
 
 #: ../Doc/whatsnew/2.7.rst:1001
-#, fuzzy
 msgid ""
 "Converting an integer or long integer to a decimal string was made faster by "
 "special-casing base 10 instead of using a generalized conversion function "
@@ -1577,7 +1538,6 @@ msgstr ""
 "Gawain Bolton; :issue:`6713`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1006
-#, fuzzy
 msgid ""
 "The :meth:`split`, :meth:`replace`, :meth:`rindex`, :meth:`rpartition`, and :"
 "meth:`rsplit` methods of string-like types (strings, Unicode strings, and :"
@@ -1593,7 +1553,6 @@ msgstr ""
 "`7462` y :issue:`7622`)"
 
 #: ../Doc/whatsnew/2.7.rst:1013
-#, fuzzy
 msgid ""
 "The :mod:`pickle` and :mod:`cPickle` modules now automatically intern the "
 "strings used for attribute names, reducing memory usage of the objects "
@@ -1601,11 +1560,10 @@ msgid ""
 msgstr ""
 "Los módulos :mod:`pickle` y :mod:`cPickle` ahora internan automáticamente "
 "las cadenas usadas para los nombres de los atributos, reduciendo el uso de "
-"memoria de los objetos resultantes del unpickling.  (Contribución de Jake "
-"McGuire; :issue:`5084`.)"
+"memoria de los objetos resultantes del desempaquetamiento.  (Contribución de "
+"Jake McGuire; :issue:`5084`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1018
-#, fuzzy
 msgid ""
 "The :mod:`cPickle` module now special-cases dictionaries, nearly halving the "
 "time required to pickle them. (Contributed by Collin Winter; :issue:`5670`.)"
@@ -2906,7 +2864,6 @@ msgstr ""
 "`8024`)."
 
 #: ../Doc/whatsnew/2.7.rst:1648 ../Doc/whatsnew/2.7.rst:2508
-#, fuzzy
 msgid ""
 "The :mod:`urlparse` module's :func:`~urlparse.urlsplit` now handles unknown "
 "URL schemes in a fashion compliant with :rfc:`3986`: if the URL is of the "
@@ -2920,8 +2877,7 @@ msgstr ""
 "URL es de la forma ``\"<something>://...\"``, el texto que precede a ``://`` "
 "se trata como el esquema, incluso si es un esquema inventado que el módulo "
 "no conoce.  Este cambio puede romper el código que funcionaba con el antiguo "
-"comportamiento.  Por ejemplo, Python 2.6.4 o 2.5 devolverá lo siguiente:</"
-"something>"
+"comportamiento.  Por ejemplo, Python 2.6.4 o 2.5 devolverá lo siguiente:"
 
 #: ../Doc/whatsnew/2.7.rst:1663 ../Doc/whatsnew/2.7.rst:2523
 #, fuzzy
