removed a few fuzzies more

--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-10-13 07:32+0100\n"
+"PO-Revision-Date: 2021-10-13 09:13+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1573,12 +1573,10 @@ msgstr ""
 "de Collin Winter; :issue:`5670`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1025
-#, fuzzy
 msgid "New and Improved Modules"
 msgstr "Módulos nuevos y mejorados"
 
 #: ../Doc/whatsnew/2.7.rst:1027
-#, fuzzy
 msgid ""
 "As in every release, Python's standard library received a number of "
 "enhancements and bug fixes.  Here's a partial list of the most notable "
@@ -1589,12 +1587,11 @@ msgstr ""
 "Como en cada versión, la biblioteca estándar de Python ha recibido una serie "
 "de mejoras y correcciones de errores.  Aquí hay una lista parcial de los "
 "cambios más notables, ordenados alfabéticamente por nombre de módulo. "
-"Consulta el archivo :file:`Misc/NEWS` en el árbol de fuentes para una lista "
-"más completa de cambios, o mira los registros de Subversion para todos los "
-"detalles."
+"Consulta el archivo :file:`Misc/NEWS` en el árbol de código fuente para una "
+"lista más completa de cambios, o mira los registros de Subversion para todos "
+"los detalles."
 
 #: ../Doc/whatsnew/2.7.rst:1033
-#, fuzzy
 msgid ""
 "The :mod:`bdb` module's base debugging class :class:`~bdb.Bdb` gained a "
 "feature for skipping modules.  The constructor now takes an iterable "
@@ -1611,7 +1608,6 @@ msgstr ""
 "`5142`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1041
-#, fuzzy
 msgid ""
 "The :mod:`binascii` module now supports the buffer API, so it can be used "
 "with :class:`memoryview` instances and other similar buffer objects. "
@@ -1619,10 +1615,9 @@ msgid ""
 msgstr ""
 "El módulo :mod:`binascii` soporta ahora la API del buffer, por lo que puede "
 "utilizarse con instancias de :class:`memoryview` y otros objetos de buffer "
-"similares. (Retornado de la 3.x por Florent Xicluna; :issue:`7703`.)"
+"similares. (Tomado de la 3.x por Florent Xicluna; :issue:`7703`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1045
-#, fuzzy
 msgid ""
 "Updated module: the :mod:`bsddb` module has been updated from 4.7.2devel9 to "
 "version 4.8.4 of `the pybsddb package <https://www.jcea.es/programacion/"
@@ -1640,7 +1635,6 @@ msgstr ""
 "jcea.es/pybsddb/file/tip/ChangeLog.)"
 
 #: ../Doc/whatsnew/2.7.rst:1053
-#, fuzzy
 msgid ""
 "The :mod:`bz2` module's :class:`~bz2.BZ2File` now supports the context "
 "management protocol, so you can write ``with bz2.BZ2File(...) as f:``. "
@@ -1651,7 +1645,6 @@ msgstr ""
 "como f:``. (Contribución de Hagen Fürstenau; :issue:`3860`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1057
-#, fuzzy
 msgid ""
 "New class: the :class:`~collections.Counter` class in the :mod:`collections` "
 "module is useful for tallying data.  :class:`~collections.Counter` instances "
@@ -1664,7 +1657,6 @@ msgstr ""
 "pero devuelven cero si faltan claves en lugar de lanzar un :exc:`KeyError`:"
 
 #: ../Doc/whatsnew/2.7.rst:1079
-#, fuzzy
 msgid ""
 "There are three additional :class:`~collections.Counter` methods. :meth:"
 "`~collections.Counter.most_common` returns the N most common elements and "
@@ -1683,12 +1675,10 @@ msgstr ""
 "u otra :class:`Counter`, los recuentos se restan. ::"
 
 #: ../Doc/whatsnew/2.7.rst:1102
-#, fuzzy
 msgid "Contributed by Raymond Hettinger; :issue:`1696199`."
 msgstr "Contribución de Raymond Hettinger; :issue:`1696199`."
 
 #: ../Doc/whatsnew/2.7.rst:1106
-#, fuzzy
 msgid ""
 "New class: :class:`~collections.OrderedDict` is described in the earlier "
 "section :ref:`pep-0372`."
@@ -1697,7 +1687,6 @@ msgstr ""
 "anterior :ref:`pep-0372`."
 
 #: ../Doc/whatsnew/2.7.rst:1109
-#, fuzzy
 msgid ""
 "New method: The :class:`~collections.deque` data type now has a :meth:"
 "`~collections.deque.count` method that returns the number of contained "
@@ -1716,7 +1705,6 @@ msgstr ""
 "características han sido añadidas por Raymond Hettinger)"
 
 #: ../Doc/whatsnew/2.7.rst:1117
-#, fuzzy
 msgid ""
 "The :class:`~collections.namedtuple` class now has an optional *rename* "
 "parameter. If *rename* is true, field names that are invalid because they've "
@@ -1730,12 +1718,10 @@ msgstr ""
 "de la lista de campos:"
 
 #: ../Doc/whatsnew/2.7.rst:1128
-#, fuzzy
 msgid "(Added by Raymond Hettinger; :issue:`1818`.)"
 msgstr "(Añadido por Raymond Hettinger; :issue:`1818`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1130
-#, fuzzy
 msgid ""
 "Finally, the :class:`~collections.Mapping` abstract base class now returns :"
 "const:`NotImplemented` if a mapping is compared to another type that isn't "
@@ -1746,7 +1732,6 @@ msgstr ""
 "es un :class:`Mapping`. (Corregido por Daniel Stutzbach; :issue:`8729`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1135
-#, fuzzy
 msgid ""
 "Constructors for the parsing classes in the :mod:`ConfigParser` module now "
 "take an *allow_no_value* parameter, defaulting to false; if true, options "
@@ -1757,12 +1742,10 @@ msgstr ""
 "verdadero, se permitirán las opciones sin valores.  Por ejemplo::"
 
 #: ../Doc/whatsnew/2.7.rst:1157
-#, fuzzy
 msgid "(Contributed by Mats Kindahl; :issue:`7005`.)"
 msgstr "(Contribución de Mats Kindahl; :issue:`7005`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1159
-#, fuzzy
 msgid ""
 "Deprecated function: :func:`contextlib.nested`, which allows handling more "
 "than one context manager with a single :keyword:`with` statement, has been "
@@ -1770,12 +1753,11 @@ msgid ""
 "context managers."
 msgstr ""
 "Función obsoleta: :func:`contextlib.nested`, que permite manejar más de un "
-"gestor de contexto con una sola sentencia :keyword:`with`, ha sido obsoleta, "
-"porque la sentencia :keyword:`!with` soporta ahora múltiples gestores de "
-"contexto."
+"gestor de contexto con una sola expresión :keyword:`with`, ha sido "
+"deprecada, porque la expresión :keyword:`!with` soporta ahora múltiples "
+"gestores de contexto."
 
 #: ../Doc/whatsnew/2.7.rst:1164
-#, fuzzy
 msgid ""
 "The :mod:`cookielib` module now ignores cookies that have an invalid version "
 "field, one that doesn't contain an integer value.  (Fixed by John J. Lee; :"
@@ -1786,7 +1768,6 @@ msgstr ""
 "J. Lee; :issue:`3924`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1168
-#, fuzzy
 msgid ""
 "The :mod:`copy` module's :func:`~copy.deepcopy` function will now correctly "
 "copy bound instance methods.  (Implemented by Robert Collins; :issue:`1515`.)"
@@ -1796,7 +1777,6 @@ msgstr ""
 "Collins; :issue:`1515`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1172
-#, fuzzy
 msgid ""
 "The :mod:`ctypes` module now always converts ``None`` to a C ``NULL`` "
 "pointer for arguments declared as pointers.  (Changed by Thomas Heller; :"
@@ -1812,7 +1792,6 @@ msgstr ""
 "issue:`8142`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1179
-#, fuzzy
 msgid ""
 "New method: the :mod:`datetime` module's :class:`~datetime.timedelta` class "
 "gained a :meth:`~datetime.timedelta.total_seconds` method that returns the "
@@ -1847,7 +1826,6 @@ msgstr ""
 "(Implementado por Raymond Hettinger; :issue:`4796`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1194
-#, fuzzy
 msgid ""
 "Comparing instances of :class:`~decimal.Decimal` with floating-point numbers "
 "now produces sensible results based on the numeric values of the operands.  "
@@ -1868,7 +1846,6 @@ msgstr ""
 "class:`~decimal.Decimal`.  (Corregido por Mark Dickinson; :issue:`2531`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1203
-#, fuzzy
 msgid ""
 "The constructor for :class:`~decimal.Decimal` now accepts floating-point "
 "numbers (added by Raymond Hettinger; :issue:`8257`) and non-European Unicode "
@@ -1881,7 +1858,6 @@ msgstr ""
 "Dickinson; :issue:`6595`)."
 
 #: ../Doc/whatsnew/2.7.rst:1208
-#, fuzzy
 msgid ""
 "Most of the methods of the :class:`~decimal.Context` class now accept "
 "integers as well as :class:`~decimal.Decimal` instances; the only exceptions "
@@ -1894,7 +1870,6 @@ msgstr ""
 "`~decimal.Context.is_canonical`.  (Parche de Juan José Conti; :issue:`7633`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1213
-#, fuzzy
 msgid ""
 "When using :class:`~decimal.Decimal` instances with a string's :meth:`~str."
 "format` method, the default alignment was previously left-alignment.  This "
@@ -1907,7 +1882,6 @@ msgstr ""
 "para los tipos numéricos.  (Cambiado por Mark Dickinson; :issue:`6857`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1218
-#, fuzzy
 msgid ""
 "Comparisons involving a signaling NaN value (or ``sNAN``) now signal :const:"
 "`InvalidOperation` instead of silently returning a true or false value "
