--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-10-14 08:42+0100\n"
+"PO-Revision-Date: 2021-10-14 08:56+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2953,12 +2953,10 @@ msgstr ""
 "3.1."
 
 #: ../Doc/whatsnew/2.7.rst:1768
-#, fuzzy
 msgid "New module: sysconfig"
 msgstr "Nuevo módulo: sysconfig"
 
 #: ../Doc/whatsnew/2.7.rst:1770
-#, fuzzy
 msgid ""
 "The :mod:`sysconfig` module has been pulled out of the Distutils package, "
 "becoming a new top-level module in its own right. :mod:`sysconfig` provides "
@@ -2974,9 +2972,8 @@ msgstr ""
 "su directorio fuente."
 
 #: ../Doc/whatsnew/2.7.rst:1777
-#, fuzzy
 msgid "Some of the functions in the module are:"
-msgstr "Algunas de las funciones del módulo son"
+msgstr "Algunas de las funciones del módulo son:"
 
 #: ../Doc/whatsnew/2.7.rst:1779
 #, fuzzy
