changes to backported

--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -1523,8 +1523,8 @@ msgid ""
 "issue:`4715`.)"
 msgstr ""
 "Las comprensiones de listas con una condición ``if`` se compilan en código "
-"de bytes más rápido.  (Parche de Antoine Pitrou, retroalimentado a la 2.7 "
-"por Jeffrey Yasskin; :issue:`4715`)"
+"de bytes más rápido.  (Parche de Antoine Pitrou, portado a la 2.7 por "
+"Jeffrey Yasskin; :issue:`4715`)"
 
 #: ../Doc/whatsnew/2.7.rst:1001
 msgid ""
@@ -2819,7 +2819,7 @@ msgstr ""
 "un conjunto que sólo contiene referencias débiles a sus elementos; los "
 "elementos serán eliminados una vez que no haya referencias que apunten a "
 "ellos. (Implementado originalmente en Python 3.x por Raymond Hettinger, y "
-"retrocedido a 2.7 por Michael Foord)"
+"Portado a 2.7 por Michael Foord)"
 
 #: ../Doc/whatsnew/2.7.rst:1691
 msgid ""
@@ -4079,8 +4079,8 @@ msgid ""
 "Implemented in Python 3.1 and backported to 2.7 by Larry Hastings; discussed "
 "in :issue:`5630`."
 msgstr ""
-"Implementado en Python 3.1 y retrocedido a 2.7 por Larry Hastings; discutido "
-"en :issue:`5630`."
+"Implementado en Python 3.1 y portado a 2.7 por Larry Hastings; discutido en :"
+"issue:`5630`."
 
 #: ../Doc/whatsnew/2.7.rst:2325
 msgid "Port-Specific Changes: Windows"
@@ -4572,7 +4572,7 @@ msgid ""
 "attack resistant comparison operation available to Python 2 applications. "
 "(Contributed by Alex Gaynor; :issue:`21306`.)"
 msgstr ""
-":func:`hmac.compare_digest` fue retrocedido desde Python 3 para hacer una "
+":func:`hmac.compare_digest` fue portado desde Python 3 para hacer una "
 "operación de comparación resistente a los ataques de tiempo disponible para "
 "las aplicaciones de Python 2. (Contribuido por Alex Gaynor; :issue:`21306`.)"
 
@@ -4594,10 +4594,10 @@ msgid ""
 "algorithm suitable for secure password storage broadly available to Python 2 "
 "applications. (Contributed by Alex Gaynor; :issue:`21304`.)"
 msgstr ""
-":func:`hashlib.pbkdf2_hmac` fue retroalimentado desde Python 3 para hacer "
-"que un algoritmo de hash adecuado para el almacenamiento seguro de "
-"contraseñas esté ampliamente disponible para las aplicaciones de Python 2. "
-"(Contribuido por Alex Gaynor; :issue:`21304`.)"
+":func:`hashlib.pbkdf2_hmac` fue portado desde Python 3 para hacer que un "
+"algoritmo de hash adecuado para el almacenamiento seguro de contraseñas esté "
+"ampliamente disponible para las aplicaciones de Python 2. (Contribuido por "
+"Alex Gaynor; :issue:`21304`.)"
 
 #: ../Doc/whatsnew/2.7.rst:2622
 msgid ""
@@ -4619,11 +4619,11 @@ msgid ""
 "certificate store, the :class:`~ssl.SSLContext` class, and other features. "
 "(Contributed by Alex Gaynor and David Reid; :issue:`21308`.)"
 msgstr ""
-"La mayor parte del módulo :mod:`ssl` de Python 3.4 ha sido retrocedido. Esto "
-"significa que :mod:`ssl` ahora soporta la Indicación de Nombre de Servidor, "
-"la configuración de TLS1.x, el acceso al almacén de certificados de la "
-"plataforma, la clase :class:`~ssl.SSLContext`, y otras características. "
-"(Contribución de Alex Gaynor y David Reid; :issue:`21308`.)"
+"La mayor parte del módulo :mod:`ssl` de Python 3.4 ha sido portado a esta "
+"versión. Esto significa que :mod:`ssl` ahora soporta la Indicación de Nombre "
+"de Servidor, la configuración de TLS1.x, el acceso al almacén de "
+"certificados de la plataforma, la clase :class:`~ssl.SSLContext`, y otras "
+"características. (Contribución de Alex Gaynor y David Reid; :issue:`21308`.)"
 
 #: ../Doc/whatsnew/2.7.rst:2632
 msgid ""
