Fix sphinx errors and bump to 3.2.1

--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -4577,8 +4577,8 @@ msgid ""
 "def` functions are awaitable."
 msgstr ""
 "Un objeto :term:`awaitable` generalmente implementa a un método :meth:"
-"`__await__`. Objetos :term:`Coroutine` retornados a partir de funciones :"
-"keyword:`async def` son esperables."
+"`__await__`. :term:`Objetos Coroutine <coroutine>` retornados a partir de "
+"funciones :keyword:`async def` son esperables."
 
 #: ../Doc/reference/datamodel.rst:2721
 msgid ""
@@ -4618,14 +4618,14 @@ msgid ""
 "raises an exception, it is propagated by the iterator.  Coroutines should "
 "not directly raise unhandled :exc:`StopIteration` exceptions."
 msgstr ""
-"Objetos :term:`Coroutine` son objetos :term:`awaitable`. La ejecución de una "
-"corrutina puede ser controlada llamando :meth:`__await__` e iterando sobre "
-"el resultado. Cuando la corrutina ha terminado de ejecutar y retorna, el "
-"iterados levanta una excepción :exc:`StopIteration`, y el atributo :attr:"
-"`~StopIteration.value` de dicha excepción mantiene el valor de retorno. Si "
-"la corrutina lanza una excepción, ésta es propagada por el iterador. Las "
-"corrutinas no deben lanzar directamente excepciones :exc:`StopIteration` no "
-"manejadas."
+":term:`Objetos Coroutine <coroutine>` son objetos :term:`awaitable`. La "
+"ejecución de una corrutina puede ser controlada llamando :meth:`__await__` e "
+"iterando sobre el resultado. Cuando la corrutina ha terminado de ejecutar y "
+"retorna, el iterados levanta una excepción :exc:`StopIteration`, y el "
+"atributo :attr:`~StopIteration.value` de dicha excepción mantiene el valor "
+"de retorno. Si la corrutina lanza una excepción, ésta es propagada por el "
+"iterador. Las corrutinas no deben lanzar directamente excepciones :exc:"
+"`StopIteration` no manejadas."
 
 #: ../Doc/reference/datamodel.rst:2749
 msgid ""
