--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -578,7 +578,7 @@ msgid ""
 "provide these standard definitions and tools, along with some conventions "
 "for situations where annotations are not available."
 msgstr ""
-":pep:`484` introduce un :term:`módulo provisional <provisional api>` para "
+":pep:`484` introduce un :term:`módulo provisional <provisional API>` para "
 "proporcionar estas definiciones y herramientas estándar, junto con algunas "
 "convenciones para situaciones en la que las anotaciones no están disponibles."
 
@@ -1123,7 +1123,7 @@ msgid ""
 "standard definitions and tools for function type annotations. See :ref:`Type "
 "Hints <whatsnew-pep-484>` for more information."
 msgstr ""
-"El módulo nuevo :term:`provisional <provisional api>` :mod:`typing` "
+"El módulo nuevo :term:`provisional <provisional API>` :mod:`typing` "
 "proporciona definiciones y herramientas estándar para anotaciones de tipos "
 "de funciones. Consultar :ref:`Indicador de tipos <whatsnew-pep-484>` para "
 "más información."
@@ -1197,7 +1197,7 @@ msgid ""
 "all changes introduced in Python 3.5 have also been backported to Python 3.4."
 "x."
 msgstr ""
-"Ya que el módulo :mod:`asyncio` es :term:`provisional <provisional api>`, "
+"Ya que el módulo :mod:`asyncio` es :term:`provisional <provisional API>`, "
 "todos los cambios que se introdujeron en Python 3.5 también se han "
 "actualizado en Python 3.4.x."
 
@@ -3138,7 +3138,7 @@ msgstr ""
 "<coroutine>` sea creado por una función :keyword:`async def`. Una función "
 "correspondiente :func:`~sys.get_coroutine_wrapper` se puede usar para "
 "obtener un contenedor configurado actualmente. Ambas funciones son :term:"
-"`provisionales <provisional api>` y se destinan solo para propósitos de "
+"`provisionales <provisional API>` y se destinan solo para propósitos de "
 "depuración. (Contribución de Yury Selivanov en :issue:`24017`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1874
