--- a/c-api/weakref.po
+++ b/c-api/weakref.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-10-18 19:38+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Last-Translator: Diego Cristóbal Herreros <diecristher@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
